# sxmc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ANNOUNCEMENT_v1.0.0.md  CLIENTS.md  CLI_SURFACES.md  CLI_TO_AI_COMPATIBILITY.md  COMPATIBILITY_MATRIX.md  CONNECTION_EXAMPLES.md  DEMO.md  DEPLOYMENT.md  DISTRIBUTION.md  E2E_VALIDATION_REPORT.md  LAUNCH.md  MCP_AGENT_SNIPPETS.md  MCP_TO_CLI_VERIFICATION.md  OPERATIONS.md  PRODUCT_CONTRACT.md  README.md  REAL_WORLD_SKILLS_AND_MCP_REPORT.md  RELEASING.md  ROADMAP.md  SIDE_BY_SIDE.md  SMOKE_TESTS.md  STABILITY.md  TEST_SCRIPT_GUIDE.md  TEST_SUITE_REPORT.md  TEST_SUITE_REPORT_v0.2.39.md  TEST_SUITE_REPORT_v0.2.40.md  TEST_SUITE_REPORT_v0.2.41.md  TEST_SUITE_REPORT_v0.2.44.md  TEST_SUITE_REPORT_v0.2.45.md  USAGE.md  VALIDATION.md  VALIDATION_HISTORY.md  VALIDATION_RUN_v0.1.9.md  VALIDATION_RUN_v2.0.0.md  VALUE_AND_BENCHMARK_FINDINGS.md
examples/agent-docs/: AGENTS.md.snippet  CLAUDE.md.snippet
examples/clients/: claude-code-mcp.json  codex-mcp.toml  cursor-mcp.json  gemini-settings.json
examples/profiles/: from_cli.json  from_generated_cli.json
packaging/homebrew/: README.md  sxmc.rb
packaging/npm/: README.md  package.json
packaging/npm/scripts/: install.mjs
schemas/: cli_surface_v1.schema.json
scripts/: certify_release.sh  demo.sh  smoke_portable_core.sh  smoke_portable_fixtures.sh  smoke_real_world_mcps.sh  smoke_test_clients.sh  test-sxmc.sh
src/: cache.rs  cli_args.rs  cli_surfaces.rs  command_handlers.rs  discovery_snapshots.rs  lib.rs  main.rs  paths.rs
src/auth/: mod.rs
src/bake/: config.rs  mod.rs
src/cli_surfaces/: inspect.rs  materialize.rs  mod.rs  model.rs  render.rs
src/client/: api.rs  codebase.rs  commands.rs  database.rs  graphql.rs  mcp_http.rs  mcp_stdio.rs  mod.rs  openapi.rs  traffic.rs
src/output/: mod.rs
src/security/: mod.rs  skill_scanner.rs
src/server/: handler.rs  mod.rs  wrap.rs
src/skills/: discovery.rs  install.rs  mod.rs  parser.rs
tests/: cli_integration.rs
