[package]
name = "sxmc"
version = "0.2.11"
edition = "2021"
description = "One Rust binary to bridge skills, MCP, and APIs into reusable agent, terminal, and automation workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aihxp/sxmc"
homepage = "https://github.com/aihxp/sxmc"
documentation = "https://docs.rs/sxmc"
keywords = ["mcp", "cli", "skills", "openapi", "graphql"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/**", "target/**"]

[[bin]]
name = "sxmc"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "1.2", features = ["server", "client", "macros", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "reqwest"] }
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "query"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
dirs = "6"
glob = "0.3"
notify = "8"
regex = "1"
tempfile = "3"
tokio-util = "0.7"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit"] }
url = "2"
shlex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
